wip added some design fixes related to spacing etc

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -279,3 +279,12 @@
     align-items: center;
   }
 }
+.nhsuk-no-border {
+  border: none;
+  & thead th {
+    border: none;
+  }
+  & tbody td {
+    border: none;
+  }
+}
